syntax = "proto3";

package logs;

service Logs {
  rpc StreamLogs (LogRequest) returns (stream LogReply) {}
}

message LogRequest {}

message LogReply {
  string content = 1;
}
